fix: update label from 'Yes/No' to 'Confirm Checkbox'

--- a/src/pretix/control/templates/pretixcontrol/items/question_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question_edit.html
@@ -35,8 +35,8 @@
                 {% bootstrap_field form.required layout="control" %}
                 <div class="alert alert-info alert-required-boolean">
                     {% blocktrans trimmed %}
-                        If you mark a Yes/No question as required, it means that the user has to select Yes and No is not
-                        accepted. If you want to allow both options, do not make this field required.
+                    If a Confirm Checkbox is marked as required, the user must check it to proceed.
+                    To allow the user to leave it unchecked, do not set the field as required.
                     {% endblocktrans %}
                 </div>
                 <div id="valid-number">
