feat: update dashboard links and remove dashboard menu item
- Renamed main dashboard links: "Main dashboard" on eventyay-common, "Tickets dashboard" on eventyay-tickets
- Removed dashboard menu items from both common and tickets dashboards
- Linked event name in top left to event dashboard on both common and tickets event pages.

--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -236,10 +236,10 @@
                         <div class="dropdown context-selector">
                             {% block nav_top_header %}
                                 {% if request.event %}
-                                    <a href="#" class="dropdown-toggle">
+                                    <a href="{% url "control:event.index" organizer=request.event.organizer.slug event=request.event.slug %}" class="dropdown-toggle">
                                         <span class="fa-stack fa-lg">
                                           <i class="fa fa-circle fa-stack-2x"></i>
-                                          <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
+                                          <i class="fa fa-dashboard fa-stack-1x fa-inverse"></i>
                                         </span>
                                         <div class="context-indicator">
                                             <span class="context-name">{{ request.event }}</span>
@@ -258,14 +258,13 @@
                                         </div>
                                     </a>
                                 {% else %}
-                                    <a href="#" class="dropdown-toggle">
+                                    <a href="{% url "control:index" %}" class="dropdown-toggle">
                                         <span class="fa-stack fa-lg">
                                           <i class="fa fa-circle fa-stack-2x"></i>
-                                          <i class="fa fa-user fa-stack-1x fa-inverse"></i>
+                                          <i class="fa fa-dashboard fa-stack-1x fa-inverse"></i>
                                         </span>
-
                                         <div class="context-indicator">
-                                            <span class="context-name">{{ request.user }}</span>
+                                            <span class="context-name">{% trans "Tickets dashboard" %}</span>
                                         </div>
                                     </a>
                                 {% endif %}
