Move Billing Validation tab into Global Settings

--- a/src/pretix/control/templates/pretixcontrol/global_settings.html
+++ b/src/pretix/control/templates/pretixcontrol/global_settings.html
@@ -3,74 +3,43 @@
 {% load bootstrap3 %}
 {% load static %}
 {% block inner %}
-<div class="tabbed-nav">
-    <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" {% if active_tab == 'basics' %}class="active"{% endif %}>
-            <a href="{% url 'control:admin.global.settings.basics' %}">
-                {% trans "Basics" %}
-            </a>
-        </li>
-        <li role="presentation" {% if active_tab == 'localization' %}class="active"{% endif %}>
-            <a href="{% url 'control:admin.global.settings.localization' %}">
-                {% trans "Localization" %}
-            </a>
-        </li>
-        <li role="presentation" {% if active_tab == 'email' %}class="active"{% endif %}>
-            <a href="{% url 'control:admin.global.settings.email' %}">
-                {% trans "Email" %}
-            </a>
-        </li>
-        <li role="presentation" {% if active_tab == 'payment_gateways' %}class="active"{% endif %}>
-            <a href="{% url 'control:admin.global.settings.payment_gateways' %}">
-                {% trans "Payment Gateways" %}
-            </a>
-        </li>
-        <li role="presentation" {% if active_tab == 'ticket_fees' %}class="active"{% endif %}>
-            <a href="{% url 'control:admin.global.settings.ticket_fees' %}">
-                {% trans "Ticket Fees" %}
-            </a>
-        </li>
-        <li role="presentation" {% if active_tab == 'maps' %}class="active"{% endif %}>
-            <a href="{% url 'control:admin.global.settings.maps' %}">
-                {% trans "Maps" %}
-            </a>
-        </li>
-    </ul>
-    <div class="tab-content">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    {% if active_tab == 'basics' %}
-                        {% trans "Basic Settings" %}
-                    {% elif active_tab == 'localization' %}
-                        {% trans "Localization Settings" %}
-                    {% elif active_tab == 'email' %}
-                        {% trans "Email Settings" %}
-                    {% elif active_tab == 'payment_gateways' %}
-                        {% trans "Payment Gateway Settings" %}
-                    {% elif active_tab == 'ticket_fees' %}
-                        {% trans "Ticket Fee Settings" %} 
-                    {% elif active_tab == 'maps' %}
-                        {% trans "Map Settings" %}
-                    {% endif %}
-                </h3>
-            </div>
-            <div class="panel-body">
-                <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% bootstrap_form_errors form %}
+{% include "pretixcontrol/global_settings_tabs.html" %}
+<div class="tab-content">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                {% if active_tab == 'basics' %}
+                    {% trans "Basic Settings" %}
+                {% elif active_tab == 'localization' %}
+                    {% trans "Localization Settings" %}
+                {% elif active_tab == 'email' %}
+                    {% trans "Email Settings" %}
+                {% elif active_tab == 'payment_gateways' %}
+                    {% trans "Payment Gateway Settings" %}
+                {% elif active_tab == 'ticket_fees' %}
+                    {% trans "Ticket Fee Settings" %}
+                {% elif active_tab == 'billing_validation' %}
+                    {% trans "Billing Validation Settings" %} 
+                {% elif active_tab == 'maps' %}
+                    {% trans "Map Settings" %}
+                {% endif %}
+            </h3>
+        </div>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% bootstrap_form_errors form %}
 
-                    {% for field in form %}
-                        {% bootstrap_field field layout='control' %}
-                    {% endfor %}
+                {% for field in form %}
+                    {% bootstrap_field field layout='control' %}
+                {% endfor %}
 
-                    <div class="form-group submit-group">
-                        <button type="submit" class="btn btn-primary btn-save">
-                            {% trans "Save" %}
-                        </button>
-                    </div>
-                </form>
-            </div>
+                <div class="form-group submit-group">
+                    <button type="submit" class="btn btn-primary btn-save">
+                        {% trans "Save" %}
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
