--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -195,7 +195,7 @@
             <div class="col-md-4 col-md-offset-4 col-sm-6">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
                     {% if cart.total > 0 %}
-                        {% trans "Place binding order" %}
+                        {% trans "Place order" %}
                     {% else %}
                         {% trans "Submit registration" %}
                     {% endif %}
