--- a/src/pretix/eventyay_common/templates/eventyay_common/base.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/base.html
@@ -147,7 +147,7 @@
                         <div class="dropdown context-selector">
                             {% block nav_top_header %}
                                 {% if request.event %}
-                                    <a href="{% url "eventyay_common:event.index" organizer=request.event.organizer.slug event=request.event.slug %}" class="dropdown-toggle">
+                                    <a href="{% url 'eventyay_common:event.index' organizer=request.event.organizer.slug event=request.event.slug %}" class="dropdown-toggle">
                                         <span class="fa-stack fa-lg">
                                           <i class="fa fa-circle fa-stack-2x"></i>
                                           <i class="fa fa-dashboard fa-stack-1x fa-inverse"></i>
@@ -169,7 +169,7 @@
                                         </div>
                                     </a>
                                 {% else %}
-                                    <a href="{% url "eventyay_common:dashboard" %}" class="dropdown-toggle">
+                                    <a href="{% url 'eventyay_common:dashboard' %}" class="dropdown-toggle">
                                         <span class="fa-stack fa-lg">
                                             <i class="fa fa-circle fa-stack-2x"></i>
                                             <i class="fa fa-dashboard fa-stack-1x fa-inverse"></i>
