Add page to add 2FA device

--- a/src/pretix/eventyay_common/templates/eventyay_common/account/2fa-main-settings.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/account/2fa-main-settings.html
@@ -101,7 +101,7 @@
             {% endfor %}
 
             <li class="list-group-item">
-                <a href="{% url "control:user.settings.2fa.add" %}" class="btn btn-primary">
+                <a href="{% url "eventyay_common:account.2fa.add-device" %}" class="btn btn-primary">
                     <span class="fa fa-plus"></span>
                     {% trans "Add a new device" %}
                 </a>
